# Multi-QuantTrader

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml  seed_strategies.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  auth.py  backtests.py  dashboard.py  data.py  fund.py  portfolios.py  router.py  strategies.py
backend/app/core/: backtrader_engine.py  security.py
backend/app/models/: __init__.py  agent.py  backtest.py  portfolio.py  strategy.py  user.py
backend/app/schemas/: __init__.py  agent.py  backtest.py  common.py  portfolio.py  strategy.py  user.py
backend/app/services/: agent_service.py  backtest_service.py  data_service.py  portfolio_service.py
backend/app/services/agents/: __init__.py  analyst.py  base.py  executor.py  orchestrator.py  risk_manager.py  trader.py
backend/app/utils/: data_source.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/charts/: BarTrend.tsx  DonutChart.tsx  EquityCurve.tsx
frontend/src/components/common/: StatCard.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/pages/agents/: index.tsx
frontend/src/pages/backtest/: index.tsx
frontend/src/pages/dashboard/: index.tsx
frontend/src/pages/portfolio/: index.tsx
frontend/src/pages/settings/: index.tsx
frontend/src/stores/: app.ts  auth.ts  index.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
frontend/src/utils/: mockData.ts
(+1 files in other folders)
