[project]
name = "quant-trader-backend"
version = "1.0.0"
description = "多智星 - 多智能体量化回测平台后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "backtrader>=1.9.78.123",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.40",
    "ccxt>=4.4.0",
    "aiosqlite>=0.20.0",
    "cachetools>=5.5.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "coverage>=7.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
